fixed text alignment in home page

--- a/src/Components/styles.css
+++ b/src/Components/styles.css
@@ -108,7 +108,7 @@ p {
 }
 
 .page-content {
-  height: 100%;
+  
   display: flex;
   flex-direction: column;
   
@@ -133,14 +133,12 @@ p {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
   border: 0px solid black;
-  flex: 1 1 auto;
+  display: flex;
 }
 
 
 .txt-688 {
-  top: 53%;
-  position: absolute;
-  left: 2.5%;
+  
   font-size: 537.5%;
   font-family: League Spartan, sans-serif;
   font-weight: 700;
@@ -153,8 +151,7 @@ p {
 
 .orchestra-pana-1 {
   position: relative;
-  bottom: 25.86%;
-  left: 57.25%;
+  
   /* right: 4.1%;
   width: 40%;
   height: auto; */
